--- a/src/anki_image_editor/web/Method-Draw/editor/index.html
+++ b/src/anki_image_editor/web/Method-Draw/editor/index.html
@@ -802,6 +802,8 @@
   <script type="text/javascript" src="js/lib/requestanimationframe.js"></script>
   <script type="text/javascript" src="js/lib/taphold.js"></script>
   <script type="text/javascript" src="js/lib/filesaver.js"></script>
+  <script type="text/javascript" src="js/lib/canvg.js"></script>
+  <script type="text/javascript" src="js/lib/rgbcolor.js"></script>
   <script type="text/javascript" src="js/paste.js"></script>
   <script type="text/javascript" src="js/modals.js"></script>
   <script type="text/javascript" src="js/start.js"></script>
